# equivalence-class-bin-covering

./: .gitignore  CITATION.cff  LICENSE  README.md  SAMPLE_DATA.md  THIRD_PARTY_NOTICES.md  demo.py  pyproject.toml  sample_data.json
cpp/: CMakeLists.txt
cpp/build-release/: CMakeCache.txt  Makefile  bin_covering  cmake_install.cmake
cpp/src/: config.h  csp_solver.cpp  csp_solver.h  main.cpp  monte_carlo.cpp  monte_carlo.h
src/: binomial.py  config.py  estimate_trunc_norm.py  main.py  solver.py  utils.py
