[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["bryanjp3 <bryanjp3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ortools = "^9.10.4067"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
