[tool.poetry]
name = "equivalence-class-bin-covering"
version = "0.1.0"
description = "Equivalence-class bin covering with real-world and Monte Carlo experiments"
authors = ["John Bryan <jpbryan3.dev@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/jpb-1729/equivalence-class-bin-covering"
keywords = [
    "bin covering",
    "constraint programming",
    "integer programming",
    "monte carlo",
    "operations research",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
packages = [{ include = "src" }]

[tool.poetry.urls]
"Paper" = "https://doi.org/10.1109/TASE.2020.3022986"

[tool.poetry.dependencies]
python = "^3.12"
ortools = "^9.12.4544"
scipy = "^1.15.3"
matplotlib = "^3.10.3"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
